model path and checkpoint

--- a/config.ini
+++ b/config.ini
@@ -2,5 +2,7 @@
 dataset_name=ccdv/arxiv-summarization
 local_data_path=data/raw/
 
-
+[model]
+model_checkpoint=google/mt5-small
+save_dir=models/
 
