max input and target lengths

--- a/config.ini
+++ b/config.ini
@@ -5,3 +5,8 @@ local_data_path=data/raw/
 [model]
 model_checkpoint=google/mt5-small
 save_dir=models/
+
+[preprocess]
+max_input_length=1024
+max_target_length=128
+
